<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oliverthurn.fastmath2.Game"
    android:background="#ffffff">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:useDefaultMargins="false"
        android:columnCount="8"
        android:rowCount="1"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:id="@+id/headerGrid"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lvlTV"
            android:id="@+id/lvlTV"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_columnWeight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_row="0"
            android:layout_column="1"
            android:src="@drawable/goldstar15"
            android:layout_columnWeight=".25"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/goldTV"
            android:id="@+id/goldTV"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight=".25" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_row="0"
            android:layout_column="3"
            android:src="@drawable/silverstar15"
            android:layout_columnWeight=".25"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/silverTv"
            android:id="@+id/silverTV"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_columnWeight=".25" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_row="0"
            android:layout_column="5"
            android:src="@drawable/bronzestar15"
            android:layout_columnWeight=".25"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bronzeTV"
            android:id="@+id/bronzeTV"
            android:layout_row="0"
            android:layout_column="6"
            android:layout_gravity="left|center_horizontal"
            android:layout_columnWeight=".25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/topScoreTV"
            android:id="@+id/topScoreTV"
            android:layout_row="0"
            android:layout_column="7"
            android:layout_gravity="right"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1" />
    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/headerGrid"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/numDisplayGrid">

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonGrid"
        android:layout_below="@+id/numDisplayGrid"></GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/clickCounterTV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/additionTV"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/starGridView"
        android:layout_above="@+id/additionTV"
        android:layout_marginBottom="10dp"></GridLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/settingscog"
        android:background="#ffffff" />


</RelativeLayout>
